[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/General/Tiles/Red Circus Tile.png" type="Texture" id=1]
[ext_resource path="res://Assets/General/Shadows/rectangle shadow small.png" type="Texture" id=2]
[ext_resource path="res://Assets/General/Tiles/Blue Circus Tile.png" type="Texture" id=3]
[ext_resource path="res://Assets/General/Tiles/Yellow Circus Tile.png" type="Texture" id=4]
[ext_resource path="res://Assets/General/Tiles/Purple Circus Tile.png" type="Texture" id=5]
[ext_resource path="res://Assets/General/Backgrounds/blue bckgd.png" type="Texture" id=6]
[ext_resource path="res://Assets/General/Tiles/wood tile b.png" type="Texture" id=7]
[ext_resource path="res://Assets/General/Tiles/wood tile a.png" type="Texture" id=8]
[ext_resource path="res://Objects/Collision/Navmesh.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objects/Collision/NavmeshLayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objects/SceneTransition/PlayerSpawnLocation.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/SceneTransition/Doorway.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=14]
[ext_resource path="res://UI/Battle/Battle Dialogue.png" type="Texture" id=15]
[ext_resource path="res://Misc/Font/Dialogue.tres" type="DynamicFont" id=16]
[ext_resource path="res://Assets/General/Shadows/square shadow.png" type="Texture" id=17]
[ext_resource path="res://Scripts/Objects/SceneTransition/Exit.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Item_Interact.gd" type="Script" id=21]
[ext_resource path="res://Scripts/SimpleCamera2D.gd" type="Script" id=22]
[ext_resource path="res://Assets/General/Backgrounds/Inside BCKGD.png" type="Texture" id=24]

[sub_resource type="TileSet" id=1]
0/name = "wood tile a.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wood tile b.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Blue Circus Tile.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Yellow Circus Tile.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Red Circus Tile.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Purple Circus Tile.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[node name="WorldRoot" type="Node2D"]

[node name="YSort" type="YSort" parent="."]

[node name="Shadows" type="Node2D" parent="YSort"]
visible = false

[node name="CircleShadowSmall" type="Sprite" parent="YSort/Shadows"]
self_modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( -51, -272 )
scale = Vector2( 0.875301, 0.941929 )
texture = ExtResource( 14 )

[node name="RectangleShadowSmall" type="Sprite" parent="YSort/Shadows"]
self_modulate = Color( 1, 1, 1, 0.568627 )
position = Vector2( 2181, 793 )
rotation = -0.0312647
scale = Vector2( 1.29051, 1.57289 )
texture = ExtResource( 2 )

[node name="SquareShadow" type="Sprite" parent="YSort/Shadows"]
self_modulate = Color( 1, 1, 1, 0.333333 )
position = Vector2( 1270, 333 )
rotation = 0.0987094
scale = Vector2( 2.39921, 1.93583 )
texture = ExtResource( 17 )

[node name="Background" type="Node2D" parent="YSort"]
z_index = -20

[node name="DayBckgd" type="Sprite" parent="YSort/Background"]
visible = false
position = Vector2( 617, 282 )
scale = Vector2( 3.81737, 2.76094 )
texture = ExtResource( 6 )

[node name="NightBckgd" type="Sprite" parent="YSort/Background"]
modulate = Color( 1, 0.701961, 1, 1 )
position = Vector2( 687, 302 )
scale = Vector2( 2.4616, 1.75777 )
texture = ExtResource( 24 )

[node name="Floor" type="Node2D" parent="YSort"]
z_index = -10

[node name="Tiles3" type="TileMap" parent="YSort/Floor"]
modulate = Color( 0.960784, 0.992157, 0.992157, 1 )
position = Vector2( -55.5, 57.5 )
z_index = -5
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 62, 22 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -655361, 3, 0, -720896, 5, 0, -720895, 3, 0, -720894, 5, 0, -720893, 3, 0, -720892, 5, 0, -589825, 5, 0, -655360, 3, 0, -655359, 5, 0, -655358, 3, 0, -655357, 5, 0, -655356, 3, 0, -524289, 3, 0, -589824, 5, 0, -589823, 3, 0, -589822, 5, 0, -589821, 3, 0, -589820, 5, 0, -458753, 5, 0, -524288, 3, 0, -524287, 5, 0, -524286, 3, 0, -524285, 5, 0, -524284, 3, 0, -393217, 3, 0, -458752, 2, 0, -458751, 3, 0, -458750, 2, 0, -458749, 3, 0, -458748, 2, 0, -327681, 2, 0, -393216, 3, 0, -393215, 2, 0, -393214, 3, 0, -393213, 2, 0, -393212, 3, 0, -262145, 3, 0, -327680, 2, 0, -327679, 3, 0, -327678, 2, 0, -327677, 3, 0, -327676, 2, 0, -196609, 2, 0, -262144, 3, 0, -262143, 2, 0, -262142, 3, 0, -262141, 2, 0, -262140, 3, 0, -131073, 3, 0, -196608, 4, 0, -196607, 3, 0, -196606, 4, 0, -196605, 3, 0, -196604, 4, 0, -65537, 4, 0, -131072, 3, 0, -131071, 4, 0, -131070, 3, 0, -131069, 4, 0, -131068, 3, 0, -1, 3, 0, -65536, 4, 0, -65535, 3, 0, -65534, 4, 0, -65533, 3, 0, -65532, 4, 0, 65535, 4, 0, 0, 3, 0, 1, 4, 0, 2, 3, 0, 3, 4, 0, 4, 3, 0 )

[node name="Tiles2" type="TileMap" parent="YSort/Floor"]
modulate = Color( 0.960784, 0.992157, 0.992157, 1 )
position = Vector2( -55.5, 49.5 )
z_index = -5
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 62, 22 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -655361, 3, 0, -720896, 5, 0, -720895, 3, 0, -720894, 5, 0, -720893, 3, 0, -720892, 5, 0, -589825, 5, 0, -655360, 3, 0, -655359, 5, 0, -655358, 3, 0, -655357, 5, 0, -655356, 3, 0, -524289, 3, 0, -589824, 5, 0, -589823, 3, 0, -589822, 5, 0, -589821, 3, 0, -589820, 5, 0, -458753, 5, 0, -524288, 3, 0, -524287, 5, 0, -524286, 3, 0, -524285, 5, 0, -524284, 3, 0, -393217, 3, 0, -458752, 2, 0, -458751, 3, 0, -458750, 2, 0, -458749, 3, 0, -458748, 2, 0, -327681, 2, 0, -393216, 3, 0, -393215, 2, 0, -393214, 3, 0, -393213, 2, 0, -393212, 3, 0, -262145, 3, 0, -327680, 2, 0, -327679, 3, 0, -327678, 2, 0, -327677, 3, 0, -327676, 2, 0, -196609, 2, 0, -262144, 3, 0, -262143, 2, 0, -262142, 3, 0, -262141, 2, 0, -262140, 3, 0, -131073, 3, 0, -196608, 4, 0, -196607, 3, 0, -196606, 4, 0, -196605, 3, 0, -196604, 4, 0, -65537, 4, 0, -131072, 3, 0, -131071, 4, 0, -131070, 3, 0, -131069, 4, 0, -131068, 3, 0, -1, 3, 0, -65536, 4, 0, -65535, 3, 0, -65534, 4, 0, -65533, 3, 0, -65532, 4, 0, 65535, 4, 0, 0, 3, 0, 1, 4, 0, 2, 3, 0, 3, 4, 0, 4, 3, 0 )

[node name="Tiles" type="TileMap" parent="YSort/Floor"]
modulate = Color( 0.960784, 0.992157, 0.992157, 1 )
position = Vector2( -55.5, 41.5 )
z_index = -5
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 62, 22 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -655361, 3, 0, -720896, 5, 0, -720895, 3, 0, -720894, 5, 0, -720893, 3, 0, -720892, 5, 0, -589825, 5, 0, -655360, 3, 0, -655359, 5, 0, -655358, 3, 0, -655357, 5, 0, -655356, 3, 0, -524289, 3, 0, -589824, 5, 0, -589823, 3, 0, -589822, 5, 0, -589821, 3, 0, -589820, 5, 0, -458753, 5, 0, -524288, 3, 0, -524287, 5, 0, -524286, 3, 0, -524285, 5, 0, -524284, 3, 0, -393217, 3, 0, -458752, 2, 0, -458751, 3, 0, -458750, 2, 0, -458749, 3, 0, -458748, 2, 0, -327681, 2, 0, -393216, 3, 0, -393215, 2, 0, -393214, 3, 0, -393213, 2, 0, -393212, 3, 0, -262145, 3, 0, -327680, 2, 0, -327679, 3, 0, -327678, 2, 0, -327677, 3, 0, -327676, 2, 0, -196609, 2, 0, -262144, 3, 0, -262143, 2, 0, -262142, 3, 0, -262141, 2, 0, -262140, 3, 0, -131073, 3, 0, -196608, 4, 0, -196607, 3, 0, -196606, 4, 0, -196605, 3, 0, -196604, 4, 0, -65537, 4, 0, -131072, 3, 0, -131071, 4, 0, -131070, 3, 0, -131069, 4, 0, -131068, 3, 0, -1, 3, 0, -65536, 4, 0, -65535, 3, 0, -65534, 4, 0, -65533, 3, 0, -65532, 4, 0, 65535, 4, 0, 0, 3, 0, 1, 4, 0, 2, 3, 0, 3, 4, 0, 4, 3, 0 )

[node name="MiddleGround" type="Node2D" parent="YSort"]

[node name="Foreground" type="Node2D" parent="YSort"]
visible = false
z_index = 20

[node name="CollisionRoot" type="Node2D" parent="."]
visible = false

[node name="Navmesh2" parent="CollisionRoot" instance=ExtResource( 10 )]

[node name="NavmeshLayer" parent="CollisionRoot/Navmesh2" instance=ExtResource( 11 )]
polygon = PoolVector2Array( -113, 36, 227, -131, 354, -70, 174, 18, 108, 46, 152, 49, 351, 149, 227, 202 )

[node name="PlayerSpawnFromCherryTrail1" parent="CollisionRoot" instance=ExtResource( 12 )]
position = Vector2( 431, 91 )
door_name = "PivotTown1_PivotTown2"
direction = Vector2( -1, 1 )

[node name="PlayerSpawnFromCherryTrail2" parent="CollisionRoot" instance=ExtResource( 12 )]
position = Vector2( 327, -134 )
door_name = "CherryTrail3_4"
direction = Vector2( -1, -1 )

[node name="Needlepoint Path" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( -414, -259 )
script = ExtResource( 18 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Needlepoint Path"]
polygon = PoolVector2Array( 23, -44, 49, -35, -39, -1, -59, -12 )
disabled = true

[node name="PivotTown1" parent="." instance=ExtResource( 13 )]
position = Vector2( 480, 138 )
rotation = 0.0231584
script = ExtResource( 18 )
target_scene = "res://Areas/Pivot Town/Pivot_Town_1.tscn"
exit_name = "PivotTown2_PivotTown1"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PivotTown1"]
polygon = PoolVector2Array( 24.7657, -53.5879, 46.9682, -45.0997, -48.1724, -6.88636, -70.3518, -14.3748 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( -235, -234 )
z_index = 4096
current = true
script = ExtResource( 22 )
minPos = Vector2( -900, -1000 )
maxPos = Vector2( 2145, 1300 )
follow_player = true

[node name="Info_Window" type="Sprite" parent="Camera2D"]
visible = false
modulate = Color( 1, 1, 1, 0.6 )
position = Vector2( -186, -232 )
scale = Vector2( 0.7, 0.8 )
z_index = 3
texture = ExtResource( 15 )

[node name="First_Text" type="Label" parent="Camera2D/Info_Window"]
margin_left = -147.143
margin_top = -11.0
margin_right = 98.857
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.2, 1.1 )
custom_fonts/font = ExtResource( 16 )
text = "You got a Flummery Flambe!"
align = 1

[node name="Item_Interact" type="Area2D" parent="."]
visible = false
position = Vector2( 309, -145 )
script = ExtResource( 21 )
item_name = "Picnic Pie"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Item_Interact"]
position = Vector2( -47.3501, 124.25 )
polygon = PoolVector2Array( -85.6499, -125.25, -48.6499, -118.25, -39.6499, -103.25, -41.6499, -92.25, -51.6499, -79.25, -78.6499, -70.25, -103.65, -70.25, -124.65, -76.25, -139.65, -85.25, -138.65, -101.25, -131.65, -110.25, -114.65, -122.25 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 2276, 1175 )

[connection signal="item_get" from="Item_Interact" to="Camera2D" method="_on_Item_Interact_item_get"]
